# DenseCRF

./: CMakeLists.txt  README.md  learning5.cpp
examples/: CMakeLists.txt  dense_learning.cpp  learning5.cpp
include/: densecrf.h
src/: densecrf.cpp  objective.cpp  optimization.cpp
